--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,40 @@ body {
   height: 100vh;
   width: 100%;
   /* display: flex; */
+  color: #ffffff;
   justify-content: center;
   align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+/* .center {
+  align-content: center;
+} */
+
+.center {
+  /* border: 5px solid #ffff00; */
+  text-align: center;
+}
+
+ul {
+  text-align: center;
+}
+
+/* li {
+  display: inline-block;
+} */
+
+.very-big-font {
+  font-size: 450px;
+}
+
 button {
   font-size: 20px;
+}
+
+.big-font {
+  font-size: 30px;
 }
 
 .hidden {
